# foli-data-collector

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt
.github/workflows/: tests.yml
foli_harvester/: __init__.py  cli.py  client.py  collector.py  config.py  db.py  exe_entry.py  gtfs.py  health.py  lock.py  parsers.py  storage.py  timeutils.py
scripts/: build-windows-exe.ps1  foli-harvester.service  register-windows-task.ps1
tests/: test_config.py  test_gtfs.py  test_parsers.py  test_storage_and_lock.py
